Se ha hecho la estructuraa compleja del index.html; se han desarrollado las factorias de Giphy, localStorage y el perfil del usuario; Se ha desarrollado el código del usuario

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <script src="/js/app.config.js"></script>
         <!-- Factories -->
         <script src="/js/factories/comics.factory.js"></script>
+        <script src="/js/factories/giphy.factory.js"></script>
+        <script src="/js/factories/marvel.factory.js"></script>
         <!-- Controllers -->
         <script src="/js/controllers/home.controller.js"></script>
+        <script src="/js/controllers/user.controller.js"></script>
     </body>
 </html>
