--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- App Config -->
         <script src="/js/app.config.js"></script>
         <!-- Factories -->
-        <script src="/js/factories/comics.factory.js"></script>
+        <script src="/js/factories/user.factory.js"></script>
         <script src="/js/factories/giphy.factory.js"></script>
         <script src="/js/factories/marvel.factory.js"></script>
         <!-- Controllers -->
