se ha introducido en un componente la lista para mostrar y cambiar de página tanto para los gifs como para el marvel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <script src="/js/factories/user.factory.js"></script>
         <script src="/js/factories/giphy.factory.js"></script>
         <script src="/js/factories/marvel.factory.js"></script>
+        <!-- Componentes -->
+        <script src="/components/personalForm/personalForm.component.js"></script>
+        <script src="/components/sliderGifs/sliderGifs.component.js"></script>
+        <script src="/components/sliderMarvel/sliderMarvel.component.js"></script>
         <!-- Controllers -->
         <script src="/js/controllers/home.controller.js"></script>
         <script src="/js/controllers/user.controller.js"></script>
