se ha introducido un componente para el contenedor de los marvel; se han modificado diferentes estilos en home.css y los estilos de los componentes gifsContainer y marvelContainer y se han renombrado; se ha limpiado el home.controller

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <!-- Componentes -->
         <script src="/components/personalForm/personalForm.component.js"></script>
         <script src="/components/gifsContainer/gifsContainer.component.js"></script>
+        <script src="/components/MarvelContainer/MarvelContainer.component.js"></script>
         <script src="/components/sliderGifs/sliderGifs.component.js"></script>
         <script src="/components/sliderMarvel/sliderMarvel.component.js"></script>
         <!-- Controllers -->
