se ha realizado un nuevo componente para sustituir la colunmna de la izquierda, que compone las tarjetas de usuario que hay en la web, por una directiva y mejorar el código

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <script src="/js/factories/giphy.factory.js"></script>
         <script src="/js/factories/marvel.factory.js"></script>
         <!-- Componentes -->
+        <script src="/components/userCardPersonal/userCardPersonal.component.js"></script>
         <script src="/components/personalForm/personalForm.component.js"></script>
         <script src="/components/gifsContainer/gifsContainer.component.js"></script>
         <script src="/components/MarvelContainer/MarvelContainer.component.js"></script>
+        <!-- Mini Componentes -->
         <script src="/components/sliderGifs/sliderGifs.component.js"></script>
         <script src="/components/sliderMarvel/sliderMarvel.component.js"></script>
         <!-- Controllers -->
