se ha introducido un nuevo componente que sustituye la barra del navegador

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="/js/factories/marvel.factory.js"></script>
         <!-- Componentes -->
         <script src="/components/userCardPersonal/userCardPersonal.component.js"></script>
+        <script src="/components/naveBarSearch/naveBarSearch.component.js"></script>
         <script src="/components/personalForm/personalForm.component.js"></script>
         <script src="/components/gifsContainer/gifsContainer.component.js"></script>
         <script src="/components/MarvelContainer/MarvelContainer.component.js"></script>
